--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -403,7 +403,10 @@
 .dropmenu li.dir>a:after{content: " +";color:#fff;}
 .dropmenu:after{content: "";display:table;clear:both;}
 
-@media screen and (max-width:400px){.editors .editor_mobile .guide_controll .btn{font-size:15px;}  }
+@media screen and (max-width:400px){
+  .editors .editor_mobile .guide_controll .btn{font-size:14px;}
+  .editors_pick .editors_box .pricing span{font-size:12px;}
+}
 @media screen and (max-width:640px){
   .editors_pick .editors_box{float:left;width:48%;margin:0 1% 5% 1%;height:400px;}
  
@@ -414,11 +417,11 @@
   .editors .editor_mobile button.all{margin-left:15px;}
   .editors .editor_mobile .dropmenu .btn{letter-spacing:0;}
   .editors .editor_mobile .dropmenu{width:100px;}
-  .editors .editor_mobile .dropmenu ul{margin-top:20px;} 
+  .editors .editor_mobile .dropmenu ul{margin-top:18px;} 
   .editors .editor_mobile .dropmenu ul li button{width:104px;margin:0 0 15px 10px;}
-  .editors .editor_mobile .dropmenu li{margin-top:-12px;}
+  .editors .editor_mobile .dropmenu li{margin-top:-7px;}
   .editors .editor_mobile .dropmenu li a{padding:0;margin:0;}
-  .editors .editor_mobile .dropmenu li ul{left:-4px;}
+  .editors .editor_mobile .dropmenu li ul{left:-4px;width:117px;}
 }
 @media screen and (min-width:641px) and (max-width:1199px){
   .editors_pick .editors_box{float:left;width:31.33%;margin:0 1% 5% 1%;height:400px;}
