--- a/app/views/deals/_body_most_reviewed.html.erb
+++ b/app/views/deals/_body_most_reviewed.html.erb
@@ -10,10 +10,20 @@
 </div>
  -->
 
+ <!-- <div class="filter-node promotion_box" data-filter='["Category","Promotions_Title"]'>
+  <a target="_blank" href="Promotions_URL"><img src="Image_URL" alt="Img_descriptions"></a>
+  <div class="node-box inner">
+    <h2><a target="_blank" href="Promotions_URL">Promotions_Title</a></h2>
+    <p>Promotions_Descriptions</p>
+    <em>COUPON CODE: Promotion_Code</em><span>End Date: End_date</span>
+  </div>
+  <div class="btn"><a target="_blank" href="Promotions_URL">Discover More</a></div>
+</div>
+ -->
+
  <!-- Categories : coupons, sales, promotions, brands -->
- <div class="filter-node editors_box" data-filter='["electronic","Crosstour Action Camera 4K 16MP WiFi Underwater 30M with Remote Control IP68 Waterproof Case"]'>
+ <div class="filter-node editors_box" data-filter='["30k","Crosstour Action Camera 4K 16MP WiFi Underwater 30M with Remote Control IP68 Waterproof Case"]'>
   <a target="_blank" href="https://amzn.to/2Lw8uy8"><img src="https://images-na.ssl-images-amazon.com/images/I/613OI7YttwL._SX679_.jpg" alt="Gold Box Deals"></a>
-  <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>13,500 Amazon Reviews</p></div>
   <div class="node-box inner">
     <p><a target="_blank" href="https://amzn.to/2Lw8uy8">Crosstour Action Camera 4K 16MP WiFi Underwater 30M with Remote Control IP68 Waterproof Case</a></p>
   </div>
@@ -24,22 +34,19 @@
   <div class="btn"><a target="_blank" href="https://amzn.to/2Lw8uy8">Shop Now</a></div>
 </div>
 
-<div class="filter-node editors_box" data-filter='["electronic","Amazon Gold Box and Lightning Deals"]'>
+<div class="filter-node editors_box" data-filter='["30k","Amazon Gold Box and Lightning Deals"]'>
   <a target="_blank" href="https://amzn.to/2Lw8uy8"><img src="https://images-na.ssl-images-amazon.com/images/I/61vwrri0ZBL._AC_SL1500_.jpg" alt="Gold Box Deals"></a>
-  <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>13,500 Amazon Reviews</p></div>
   <div class="node-box inner">
     <p><a target="_blank" href="https://amzn.to/2Lw8uy8">Crosstour Action Camera 4K 16MP WiF</a></p>
   </div>
   <div class="pricing">
     <span>$37.39</span>
-    <span class="sec_pricing"><div class="line_style">$129.99</div><em>71% off</em></span>
   </div>
   <div class="btn"><a target="_blank" href="https://amzn.to/2Lw8uy8">Shop Now</a></div>
 </div>
 
-<div class="filter-node editors_box" data-filter='["kitchen","Amazon Gold Box and Lightning Deals"]'>
+<div class="filter-node editors_box" data-filter='["20k","Amazon Gold Box and Lightning Deals"]'>
   <a target="_blank" href="https://amzn.to/2Lw8uy8"><img src="https://images-na.ssl-images-amazon.com/images/I/91TBNEBXK0L._SX679_.jpg" alt="Gold Box Deals"></a>
-  <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>13,500 Amazon Reviews</p></div>
   <div class="node-box inner">
     <p><a target="_blank" href="https://amzn.to/2Lw8uy8">Crosstour Action Camera 4K 16MP WiFi Underwater 30M with Remote Control IP68 Waterproof Case</a></p>
   </div>
@@ -50,35 +57,30 @@
   <div class="btn"><a target="_blank" href="https://amzn.to/2Lw8uy8">Shop Now</a></div>
 </div>
 
-<div class="filter-node editors_box" data-filter='["kitchen","Amazon Gold Box and Lightning Deals"]'>
+<div class="filter-node editors_box" data-filter='["20k","Amazon Gold Box and Lightning Deals"]'>
   <a target="_blank" href="https://amzn.to/2Lw8uy8"><img src="https://images-na.ssl-images-amazon.com/images/I/71FxeMlMvkL._SX679_.jpg" alt="Gold Box Deals"></a>
-  <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>13,500 Amazon Reviews</p></div>
   <div class="node-box inner">
     <p><a target="_blank" href="https://amzn.to/2Lw8uy8">Crosstour Action Camera 4K 16MP WiFi Underwater 30M with Remote Control IP68 Waterproof Case</a></p>
   </div>
   <div class="pricing">
     <span>$37.39</span>
-    <span class="sec_pricing"><div class="line_style">$129.99</div><em>71% off</em></span>
   </div>
   <div class="btn"><a target="_blank" href="https://amzn.to/2Lw8uy8">Shop Now</a></div>
 </div>
 
-<div class="filter-node editors_box" data-filter='["kitchen","Amazon Gold Box and Lightning Deals"]'>
+<div class="filter-node editors_box" data-filter='["10k","Amazon Gold Box and Lightning Deals"]'>
   <a target="_blank" href="https://amzn.to/2Lw8uy8"><img src="https://images-na.ssl-images-amazon.com/images/I/61037gzXCTL._SX679_.jpg" alt="Gold Box Deals"></a>
-  <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>13,500 Amazon Reviews</p></div>
   <div class="node-box inner">
     <p><a target="_blank" href="https://amzn.to/2Lw8uy8">Crosstour Action Camera 4K 16MP WiFi Underwater 30M with Remote Control IP68 Waterproof Case</a></p>
   </div>
   <div class="pricing">
     <span>$37.39</span>
-    <span class="sec_pricing"><div class="line_style">$129.99</div><em>71% off</em></span>
   </div>
   <div class="btn"><a target="_blank" href="https://amzn.to/2Lw8uy8">Shop Now</a></div>
 </div>
 
-<div class="filter-node editors_box" data-filter='["electronic","Crosstour Action Camera 4K 16MP WiFi Underwater 30M with Remote Control IP68 Waterproof Case"]'>
+<div class="filter-node editors_box" data-filter='["10k","Crosstour Action Camera 4K 16MP WiFi Underwater 30M with Remote Control IP68 Waterproof Case"]'>
   <a target="_blank" href="https://amzn.to/2Lw8uy8"><img src="https://images-na.ssl-images-amazon.com/images/I/613OI7YttwL._SX679_.jpg" alt="Gold Box Deals"></a>
-  <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>13,500 Amazon Reviews</p></div>
   <div class="node-box inner">
     <p><a target="_blank" href="https://amzn.to/2Lw8uy8">Crosstour Action Camera 4K 16MP WiFi Underwater 30M with Remote Control IP68 Waterproof Case</a></p>
   </div>
@@ -89,9 +91,8 @@
   <div class="btn"><a target="_blank" href="https://amzn.to/2Lw8uy8">Shop Now</a></div>
 </div>
 
-<div class="filter-node editors_box" data-filter='["electronic","Amazon Gold Box and Lightning Deals"]'>
+<div class="filter-node editors_box" data-filter='["5k","Amazon Gold Box and Lightning Deals"]'>
   <a target="_blank" href="https://amzn.to/2Lw8uy8"><img src="https://images-na.ssl-images-amazon.com/images/I/61vwrri0ZBL._AC_SL1500_.jpg" alt="Gold Box Deals"></a>
-  <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>13,500 Amazon Reviews</p></div>
   <div class="node-box inner">
     <p><a target="_blank" href="https://amzn.to/2Lw8uy8">Crosstour Action Camera 4K 16MP WiFi Underwater 30M with Remote Control IP68 Waterproof Case</a></p>
   </div>
@@ -102,9 +103,8 @@
   <div class="btn"><a target="_blank" href="https://amzn.to/2Lw8uy8">Shop Now</a></div>
 </div>
 
-<div class="filter-node editors_box" data-filter='["kitchen","Amazon Gold Box and Lightning Deals"]'>
+<div class="filter-node editors_box" data-filter='["5k","Amazon Gold Box and Lightning Deals"]'>
   <a target="_blank" href="https://amzn.to/2Lw8uy8"><img src="https://images-na.ssl-images-amazon.com/images/I/91TBNEBXK0L._SX679_.jpg" alt="Gold Box Deals"></a>
-  <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>13,500 Amazon Reviews</p></div>
   <div class="node-box inner">
     <p><a target="_blank" href="https://amzn.to/2Lw8uy8">Crosstour Action Camera 4K 16MP WiFi Underwater 30M with Remote Control IP68 Waterproof Case</a></p>
   </div>
@@ -115,9 +115,8 @@
   <div class="btn"><a target="_blank" href="https://amzn.to/2Lw8uy8">Shop Now</a></div>
 </div>
 
-<div class="filter-node editors_box" data-filter='["kitchen","Amazon Gold Box and Lightning Deals"]'>
+<div class="filter-node editors_box" data-filter='["1k","Amazon Gold Box and Lightning Deals"]'>
   <a target="_blank" href="https://amzn.to/2Lw8uy8"><img src="https://images-na.ssl-images-amazon.com/images/I/71FxeMlMvkL._SX679_.jpg" alt="Gold Box Deals"></a>
-  <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>13,500 Amazon Reviews</p></div>
   <div class="node-box inner">
     <p><a target="_blank" href="https://amzn.to/2Lw8uy8">Crosstour Action Camera 4K 16MP WiFi Underwater 30M with Remote Control IP68 Waterproof Case</a></p>
   </div>
@@ -128,9 +127,8 @@
   <div class="btn"><a target="_blank" href="https://amzn.to/2Lw8uy8">Shop Now</a></div>
 </div>
 
-<div class="filter-node editors_box" data-filter='["kitchen","Amazon Gold Box and Lightning Deals"]'>
+<div class="filter-node editors_box" data-filter='["1k","Amazon Gold Box and Lightning Deals"]'>
   <a target="_blank" href="https://amzn.to/2Lw8uy8"><img src="https://images-na.ssl-images-amazon.com/images/I/61037gzXCTL._SX679_.jpg" alt="Gold Box Deals"></a>
-  <div class="rating"><img src="<%= asset_path 'star-5.jpg' %>"><p>13,500 Amazon Reviews</p></div>
   <div class="node-box inner">
     <p><a target="_blank" href="https://amzn.to/2Lw8uy8">Crosstour Action Camera 4K 16MP WiFi Underwater 30M with Remote Control IP68 Waterproof Case</a></p>
   </div>
