--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -46,6 +46,188 @@
  <p>run out of stock soon</p>
 -->
 
+<div class="card clearfix" data-score="15" data-price="31.44">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YPViHL"><img src="https://images-na.ssl-images-amazon.com/images/I/71ZxMxcaY1L._SX679_.jpg" alt="PopBabies Portable Blender" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YPViHL">PopBabies Portable Blender, Personal Blender with USB Rechargeable Small Blender for Shakes and Smoothies, Stronger and...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$31.44</span><span class="ori_price">$36.99</span></address>
+      <textarea readonly="readonly" class="code_area">15SO6IGL</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>15% off at $36.99</strong> with promo code: <strong class="m_codes">15SO6IGL</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 20, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2YPViHL">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="7.79">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YKkoaR"><img src="https://m.media-amazon.com/images/I/71ZND0QfOVL._SR400,400_.jpg" alt="Luckyfine Aloe Vera Essence for Face" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YKkoaR">Luckyfine Aloe Vera Essence for Face, Natural 92% Aloe Vera & 7% Hyaluronic Acid, Soothing & Moisture for Acne, Sunburn, Itchy, Dry Skin, Facial...  </a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$7.79</span><span class="ori_price">$12.98</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">40VSPUOP</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $12.98</strong> with promo code: <strong class="m_codes">40VSPUOP</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 20, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2YKkoaR">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="17.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YRjU2Q"><img src="https://m.media-amazon.com/images/I/71kSz8d9-BL._SR400,400_.jpg" alt="Women Backpack Purse" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YRjU2Q">Women Backpack Purse Nylon Covertible Designer Ladies Lightweight Fashion Travel Shoulder Bag</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$17.99</span><span class="ori_price">$35.98</span></address>
+      <textarea readonly="readonly" class="code_area">50PI1W3E</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $35.98</strong> with promo code: <strong class="m_codes">50PI1W3E</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 13, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2YRjU2Q">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="20.10">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2GSm7ER"><img src="https://m.media-amazon.com/images/I/61XufrK6nDL._SR400,400_.jpg" alt="BOSTANTEN Women Backpack" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2GSm7ER">BOSTANTEN Women Backpack Purses Water Resistant Backpacks Nylon Light Weight Travel Bags</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$20.10</span><span class="ori_price">$66.99</span></address>
+      <textarea readonly="readonly" class="code_area">70JAAJ1Y</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>70% off at $66.99</strong> with promo code: <strong class="m_codes">70JAAJ1Y</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 24, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2GSm7ER">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="27.74">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Kys1fd"><img src="https://m.media-amazon.com/images/I/614rqgdv7bL._SR400,400_.jpg" alt="USB Touch Control Table Lamp" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Kys1fd">USB Touch Control Table Lamp - Moobibear Minimalist Bedside Desk Lamp with Cylinder Lamp Shade, Dimmable Modern Ambient...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$27.74</span><span class="ori_price">$36.99</span>
+         <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">25PT5VZL</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>25% off at $36.99</strong> with promo code: <strong class="m_codes">25PT5VZL</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 09, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2Kys1fd">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="4.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YrksRv"><img src="https://m.media-amazon.com/images/I/61hZdVB8USL._SR400,400_.jpg" alt="Toptheway Replacement Brush Heads" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YrksRv">Toptheway Replacement Brush Heads Compatible with Braun Oral B Floss Action Electric Toothbrush Pro 1000 Pro 3000 Vitality Pro 500 OralB, 8 Pack </a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$4.00</span><span class="ori_price">$9.99</span></address>
+      <textarea readonly="readonly" class="code_area">602KBBK5</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>60% off at $9.99</strong> with promo code: <strong class="m_codes">602KBBK5</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 25, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2YrksRv">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="35" data-price="16.89">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Yu1E43"><img src="https://m.media-amazon.com/images/I/6143eP87IyL._SR400,400_.jpg" alt="sincetop Compatible with Apple Watch Charging Stand" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>35% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Yu1E43">sincetop Compatible with Apple Watch Charging Stand, Aluminum Stand for iPhone and Apple Watch Charging Station for Apple...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$16.89</span><span class="ori_price">$25.99</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">35A7ZBEO</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>35% off at $25.99</strong> with promo code: <strong class="m_codes">35A7ZBEO</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 25, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2Yu1E43">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="8.89">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2MJpXUK"><img src="https://m.media-amazon.com/images/I/71OwOC0xX8L._SR400,400_.jpg" alt="Zeagoo Dress" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2MJpXUK">Zeagoo Women 3/4 Sleeve Patchwork A-Line Floral Print Swing Dress</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.89</span><span class="ori_price">$29.65</span></address>
+      <textarea readonly="readonly" class="code_area">70T2Y9J9</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>70% off at $29.65</strong> with promo code: <strong class="m_codes">70T2Y9J9</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 17, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2MJpXUK">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="65" data-price="4.20">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2GNgdos"><img src="https://m.media-amazon.com/images/I/71pODGJw6PL._SR400,400_.jpg" alt="Aomoband Floral Bands" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>65% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2GNgdos">Aomoband Floral Bands Compatible with Apple Watch 38mm 42mm 40mm 44mm, Soft Silicone Pattern Printed Replacements Straps...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$4.20</span><span class="ori_price">$11.99</span></address>
+      <textarea readonly="readonly" class="code_area">651ZV53L</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>65% off at $11.99</strong> with promo code: <strong class="m_codes">651ZV53L</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 22, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2GNgdos">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="23.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/338qtRI"><img src="https://m.media-amazon.com/images/I/61jJhieXijL._SR400,400_.jpg" alt="1Mii Long Range Bluetooth 5.0 Headphones" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/338qtRI">1Mii Long Range Bluetooth 5.0 Headphones with aptx Low Latency, Bluetooth Headphones for TV Watching, Wireless On Ear Headphones with Mic,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$23.99</span><span class="ori_price">$39.99</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">40ACJ1VN</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $39.99</strong> with promo code: <strong class="m_codes">40ACJ1VN</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 09, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/338qtRI">Use Code at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="30" data-price="20.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2YJ70DK"><img src="https://m.media-amazon.com/images/I/51MVFVBv-bL._SR400,400_.jpg" alt="10000mAh Portable Charger" /></a>
