--- a/app/views/deals/most_reviewed.html.erb
+++ b/app/views/deals/most_reviewed.html.erb
@@ -4,7 +4,7 @@
   <%= render 'deals/header' %>
   
   <div class="promotions editors_pick common_layout clearfix">
-    <%= render 'deals/navbar_editor' %>
+    <%= render 'deals/navbar_most_reviewed' %>
     <div class="filter-group guide_wrap">
       <%= render 'deals/body_most_reviewed' %>
     </div><!--./filter-group-->
