--- a/app/views/deals/_header.html.erb
+++ b/app/views/deals/_header.html.erb
@@ -12,7 +12,7 @@
       <ul class="clearfix">
           <li><a href="/deals/bestdeals">Daily Deals</a></li>
           <li><a href="/deals/promo_codes">Promo Codes</a></li>          
-          <li><a href="/deals/most_reviewed">Most Reviewed</a></li>
+          <!-- <li><a href="/deals/most_reviewed">Most Reviewed</a></li> -->
           <!-- <li><a href="/deals/picked_deals">Best Deals</a></li> -->
           <!--<li><a href="deals-v2-onsale.html">On Sale</a></li>-->
           <li class="coumos" ><a href="/deals/promotions">Coupon Codes & Promotions</a></li>
@@ -24,7 +24,7 @@
       <ul class="clearfix">
         <li><a href="/deals/bestdeals">DAILY DEALS,</a></li>
         <li><a href="/deals/promo_codes">PROMO CODES,</a></li>
-        <li><a href="/deals/most_reviewed">MOST REVIEWED,</a></li>
+        <!-- <li><a href="/deals/most_reviewed">MOST REVIEWED,</a></li> -->
         <!-- <li><a href="/deals/coupons">SALES & COUPONS,</a></li> -->
         <!--<li><a href="deals-v2-onsale.html">On Sale</a></li>-->
         <li><a href="/deals/promotions">COUPON CODES & PROMOTIONS,</a></li>
