--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -5,8 +5,7 @@
         
         <div class="footer-section about clearfix">
           <h1 class="logo-text"><span>Oh,</span>i gotta buy this</h1>
-          <p>Oh,igottabuythis is the curation platform to discover awesome products from around the world and
-            find thousands of best deals, coupon codes from Amazon.<br />Staying up to date with the coolest products and the latest information of deals </p>            
+          <p>It is discount platform but also trending item platform</p>            
           <div class="contact">
             <span><i class="fas fa-envelope"></i> &nbsp; ohigottabuythis@gmail.com </span>
           </div>
@@ -29,7 +28,7 @@
             <li><a href="#n">#Promotion</a></li>
           </ul>
           <div class="contact_us">
-            <h1>About Us</h1>
+            <h1>About</h1>
             <ul class="clearfix">
               <li><a href="/messages">#About Us</a></li>
               <li><a href="/messages/new">#Contact Us</a></li>
