--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,6 +1,7 @@
 <%= simple_form_for @message do |f| %>
+  <%= f.select :m_spare_02, options_for_select([["Categories", ""], "Questions", "Feedback", "Broken Link"])%>
   <%= f.input :m_spare_01, placeholder: 'Your name', label: false, input_html: { class: 'm_name' }  %>
-  <%= f.input :mmail, placeholder: 'Your email', label: false, input_html: { class: 'm_mail' }  %>
+  <%= f.input :mmail, placeholder: 'Your email',as: :email, label: false, input_html: { class: 'm_mail' }  %>
   <%= f.input :mtitle, placeholder: 'Subject', label: false %>
   <%= f.input :mcontent, placeholder: 'How can we hlep?', label: false, as: :text, :input_html => { :rows => 10 } %>
   <%= f.button :submit, 'Send Message' %>
