--- a/app/assets/stylesheets/gadgets.css
+++ b/app/assets/stylesheets/gadgets.css
@@ -108,8 +108,9 @@
 
 .show_wrap{margin-top:100px;}
 .show_wrap .show_box{width:1000px;margin:0 auto;font-family: 'Montserrat', sans-serif;font-weight:600;box-shadow:0px 13px 40px -24px rgba(0,0,0,0.15)}
-.show_wrap .show_box .show_img{float:left;width:44%;margin:5% 2%;}
+.show_wrap .show_box .show_img{float:left;width:44%;margin:5% 2%;position:relative;}
 .show_wrap .show_box .show_img img{width:80%;}
+.show_wrap .show_box .show_img button img{width:40px;position:absolute;left:5px;bottom:33px;}
 .show_wrap .show_box .show_inner{float:left;width:48%;margin: 4% 0 10% 2%;}
 .show_wrap .show_box .show_inner h2{font-size:30px;}
 .show_wrap .show_box .show_inner h2 a{text-decoration:none;color:#000;background:none;padding:0;}
